抽出したパラメータを使用して, 関数を実行

--- a/jn/main.ipynb
+++ b/jn/main.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,115 @@
       "[800]\ttraining's rmse: 3.47384\tvalid_1's rmse: 3.66082\n",
       "[900]\ttraining's rmse: 3.46054\tvalid_1's rmse: 3.65945\n",
       "[1000]\ttraining's rmse: 3.44644\tvalid_1's rmse: 3.65834\n",
-      "[1100]\ttraining's rmse: 3.4344\tvalid_1's rmse: 3.65762\n"
+      "[1100]\ttraining's rmse: 3.4344\tvalid_1's rmse: 3.65762\n",
+      "[1200]\ttraining's rmse: 3.42296\tvalid_1's rmse: 3.6572\n",
+      "[1300]\ttraining's rmse: 3.41203\tvalid_1's rmse: 3.6567\n",
+      "[1400]\ttraining's rmse: 3.40114\tvalid_1's rmse: 3.65613\n",
+      "[1500]\ttraining's rmse: 3.3907\tvalid_1's rmse: 3.65573\n",
+      "[1600]\ttraining's rmse: 3.38027\tvalid_1's rmse: 3.65539\n",
+      "[1700]\ttraining's rmse: 3.36963\tvalid_1's rmse: 3.65499\n",
+      "[1800]\ttraining's rmse: 3.3589\tvalid_1's rmse: 3.65508\n",
+      "[1900]\ttraining's rmse: 3.34974\tvalid_1's rmse: 3.65503\n",
+      "Early stopping, best iteration is:\n",
+      "[1728]\ttraining's rmse: 3.36652\tvalid_1's rmse: 3.65489\n",
+      "fold n°2\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.71769\tvalid_1's rmse: 3.75192\n",
+      "[200]\ttraining's rmse: 3.64423\tvalid_1's rmse: 3.70825\n",
+      "[300]\ttraining's rmse: 3.59661\tvalid_1's rmse: 3.68701\n",
+      "[400]\ttraining's rmse: 3.5613\tvalid_1's rmse: 3.67547\n",
+      "[500]\ttraining's rmse: 3.5334\tvalid_1's rmse: 3.66822\n",
+      "[600]\ttraining's rmse: 3.51074\tvalid_1's rmse: 3.66402\n",
+      "[700]\ttraining's rmse: 3.49063\tvalid_1's rmse: 3.66088\n",
+      "[800]\ttraining's rmse: 3.4725\tvalid_1's rmse: 3.65876\n",
+      "[900]\ttraining's rmse: 3.4574\tvalid_1's rmse: 3.65751\n",
+      "[1000]\ttraining's rmse: 3.44262\tvalid_1's rmse: 3.6567\n",
+      "[1100]\ttraining's rmse: 3.42894\tvalid_1's rmse: 3.6563\n",
+      "[1200]\ttraining's rmse: 3.41623\tvalid_1's rmse: 3.65573\n",
+      "[1300]\ttraining's rmse: 3.40462\tvalid_1's rmse: 3.65554\n",
+      "[1400]\ttraining's rmse: 3.39371\tvalid_1's rmse: 3.65555\n",
+      "[1500]\ttraining's rmse: 3.38298\tvalid_1's rmse: 3.65533\n",
+      "[1600]\ttraining's rmse: 3.37231\tvalid_1's rmse: 3.65522\n",
+      "[1700]\ttraining's rmse: 3.36141\tvalid_1's rmse: 3.65522\n",
+      "[1800]\ttraining's rmse: 3.35148\tvalid_1's rmse: 3.65494\n",
+      "[1900]\ttraining's rmse: 3.34144\tvalid_1's rmse: 3.65513\n",
+      "[2000]\ttraining's rmse: 3.33169\tvalid_1's rmse: 3.65505\n",
+      "Early stopping, best iteration is:\n",
+      "[1815]\ttraining's rmse: 3.34983\tvalid_1's rmse: 3.65483\n",
+      "fold n°3\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.71627\tvalid_1's rmse: 3.75673\n",
+      "[200]\ttraining's rmse: 3.64145\tvalid_1's rmse: 3.71461\n",
+      "[300]\ttraining's rmse: 3.59193\tvalid_1's rmse: 3.69495\n",
+      "[400]\ttraining's rmse: 3.55602\tvalid_1's rmse: 3.68506\n",
+      "[500]\ttraining's rmse: 3.52844\tvalid_1's rmse: 3.68044\n",
+      "[600]\ttraining's rmse: 3.50578\tvalid_1's rmse: 3.67736\n",
+      "[700]\ttraining's rmse: 3.48613\tvalid_1's rmse: 3.67577\n",
+      "[800]\ttraining's rmse: 3.46913\tvalid_1's rmse: 3.67473\n",
+      "[900]\ttraining's rmse: 3.45346\tvalid_1's rmse: 3.67399\n",
+      "[1000]\ttraining's rmse: 3.43945\tvalid_1's rmse: 3.67319\n",
+      "[1100]\ttraining's rmse: 3.42657\tvalid_1's rmse: 3.67297\n",
+      "[1200]\ttraining's rmse: 3.4136\tvalid_1's rmse: 3.67281\n",
+      "[1300]\ttraining's rmse: 3.40147\tvalid_1's rmse: 3.67268\n",
+      "[1400]\ttraining's rmse: 3.38976\tvalid_1's rmse: 3.67239\n",
+      "[1500]\ttraining's rmse: 3.37793\tvalid_1's rmse: 3.67218\n",
+      "[1600]\ttraining's rmse: 3.3677\tvalid_1's rmse: 3.67203\n",
+      "[1700]\ttraining's rmse: 3.35736\tvalid_1's rmse: 3.6719\n",
+      "[1800]\ttraining's rmse: 3.34648\tvalid_1's rmse: 3.67205\n",
+      "Early stopping, best iteration is:\n",
+      "[1676]\ttraining's rmse: 3.35963\tvalid_1's rmse: 3.67181\n",
+      "fold n°4\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.72122\tvalid_1's rmse: 3.74394\n",
+      "[200]\ttraining's rmse: 3.64802\tvalid_1's rmse: 3.69533\n",
+      "[300]\ttraining's rmse: 3.59972\tvalid_1's rmse: 3.67109\n",
+      "[400]\ttraining's rmse: 3.56472\tvalid_1's rmse: 3.65823\n",
+      "[500]\ttraining's rmse: 3.5367\tvalid_1's rmse: 3.65126\n",
+      "[600]\ttraining's rmse: 3.51346\tvalid_1's rmse: 3.6467\n",
+      "[700]\ttraining's rmse: 3.4932\tvalid_1's rmse: 3.64377\n",
+      "[800]\ttraining's rmse: 3.47539\tvalid_1's rmse: 3.64137\n",
+      "[900]\ttraining's rmse: 3.46004\tvalid_1's rmse: 3.63967\n",
+      "[1000]\ttraining's rmse: 3.44574\tvalid_1's rmse: 3.63883\n",
+      "[1100]\ttraining's rmse: 3.43225\tvalid_1's rmse: 3.63783\n",
+      "[1200]\ttraining's rmse: 3.41996\tvalid_1's rmse: 3.63733\n",
+      "[1300]\ttraining's rmse: 3.40827\tvalid_1's rmse: 3.63713\n",
+      "[1400]\ttraining's rmse: 3.39635\tvalid_1's rmse: 3.63664\n",
+      "[1500]\ttraining's rmse: 3.38524\tvalid_1's rmse: 3.63649\n",
+      "[1600]\ttraining's rmse: 3.37468\tvalid_1's rmse: 3.63618\n",
+      "[1700]\ttraining's rmse: 3.36439\tvalid_1's rmse: 3.63617\n",
+      "[1800]\ttraining's rmse: 3.35351\tvalid_1's rmse: 3.63613\n",
+      "[1900]\ttraining's rmse: 3.34392\tvalid_1's rmse: 3.63621\n",
+      "[2000]\ttraining's rmse: 3.33334\tvalid_1's rmse: 3.6361\n",
+      "[2100]\ttraining's rmse: 3.32318\tvalid_1's rmse: 3.63622\n",
+      "Early stopping, best iteration is:\n",
+      "[1952]\ttraining's rmse: 3.33867\tvalid_1's rmse: 3.63592\n",
+      "fold n°5\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.71921\tvalid_1's rmse: 3.74646\n",
+      "[200]\ttraining's rmse: 3.64426\tvalid_1's rmse: 3.7041\n",
+      "[300]\ttraining's rmse: 3.59482\tvalid_1's rmse: 3.68542\n",
+      "[400]\ttraining's rmse: 3.55862\tvalid_1's rmse: 3.6763\n",
+      "[500]\ttraining's rmse: 3.53017\tvalid_1's rmse: 3.67142\n",
+      "[600]\ttraining's rmse: 3.50627\tvalid_1's rmse: 3.66884\n",
+      "[700]\ttraining's rmse: 3.48708\tvalid_1's rmse: 3.66731\n",
+      "[800]\ttraining's rmse: 3.46884\tvalid_1's rmse: 3.66623\n",
+      "[900]\ttraining's rmse: 3.45343\tvalid_1's rmse: 3.6657\n",
+      "[1000]\ttraining's rmse: 3.4389\tvalid_1's rmse: 3.66533\n",
+      "[1100]\ttraining's rmse: 3.42527\tvalid_1's rmse: 3.66496\n",
+      "[1200]\ttraining's rmse: 3.41329\tvalid_1's rmse: 3.66436\n",
+      "[1300]\ttraining's rmse: 3.40154\tvalid_1's rmse: 3.66421\n",
+      "[1400]\ttraining's rmse: 3.38985\tvalid_1's rmse: 3.66381\n",
+      "[1500]\ttraining's rmse: 3.37974\tvalid_1's rmse: 3.66368\n",
+      "[1600]\ttraining's rmse: 3.36897\tvalid_1's rmse: 3.66343\n",
+      "[1700]\ttraining's rmse: 3.3591\tvalid_1's rmse: 3.66329\n",
+      "[1800]\ttraining's rmse: 3.34854\tvalid_1's rmse: 3.66317\n",
+      "[1900]\ttraining's rmse: 3.33778\tvalid_1's rmse: 3.66278\n",
+      "[2000]\ttraining's rmse: 3.32802\tvalid_1's rmse: 3.66264\n",
+      "[2100]\ttraining's rmse: 3.31857\tvalid_1's rmse: 3.66265\n",
+      "[2200]\ttraining's rmse: 3.30905\tvalid_1's rmse: 3.66261\n",
+      "[2300]\ttraining's rmse: 3.29977\tvalid_1's rmse: 3.66273\n",
+      "Early stopping, best iteration is:\n",
+      "[2179]\ttraining's rmse: 3.31085\tvalid_1's rmse: 3.66248\n"
      ]
     }
    ],
@@ -430,6 +538,26 @@
     "# model\n",
     "with base.timer(\"Light GBM\"):\n",
     "    val_pred_lgb, test_pred_lgb, lgb_importance_df = gb.Regressors(gb.Lightgbm_Regressor,param_lgb1,train,test,best_features,target,folds=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIghtgbm validation RMSE: 3.6560\n"
+     ]
+    }
+   ],
+   "source": [
+    "# result\n",
+    "print(\"LIghtgbm validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_lgb)))\n",
+    "# submit\n",
+    "base.submit(test_pred_lgb,home_path=home_path,tech = \"Lightgbm_best_feature_param1\")"
    ]
   },
   {
