--- a/jn/main.ipynb
+++ b/jn/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "<module 'GradientBoosting' from '/Users/takutokotsubo/Desktop/Elo_kaggle/py/models/GradientBoosting.py'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,23 +84,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "201917 observations and 1041 features in train set.\n",
-      "123623 observations and 1039 features in test set.\n",
-      "1037 observations and 1 features in features set.\n"
+      "201917 observations and 1687 features in train set.\n",
+      "123623 observations and 1685 features in test set.\n",
+      "1683 observations and 1 features in features set.\n"
      ]
     }
    ],
    "source": [
     "# read file\n",
     "# train_name = \"train_sample\"; test_name = \"test_sample\"; features_name = \"features_sample\"; # test code\n",
-    "train_name = \"train_1037\"; test_name = \"test_1037\"; features_name = \"features_1037\";\n",
+    "train_name = \"train_20190112\"; test_name = \"test_20190112\"; features_name = \"features_20190112\";\n",
     "train, test, features, target = base.read_data(train_name,test_name,features_name,home_path)"
    ]
   },
@@ -296,6 +296,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- LightGBM\n",
+    "   - execute model: モデルを実行する\n",
+    "   - visualization model importance: 特徴量の重要度を可視化する\n",
+    "   - using best features: 任意の特徴量を用いて, 性能がどのように変化するか"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Light GBM"
    ]
   },
@@ -308,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,24 +329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-f3523f0f5c5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mbase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Light GBM\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mval_pred_lgb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_pred_lgb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimportance_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRegressors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLightgbm_Regressor\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparam_lgb1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfolds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Desktop/Elo_kaggle/py/models/GradientBoosting.py\u001b[0m in \u001b[0;36mRegressors\u001b[0;34m(algorithm, param_set, train, test, features, target, folds)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m## remove inf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# inf 処理\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# inf 処理\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0;31m## k-stratified k-Fold\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mfolds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mValidation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfolds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mreplace\u001b[0;34m(self, to_replace, value, inplace, limit, regex, method, axis)\u001b[0m\n\u001b[1;32m   4583\u001b[0m                     new_data = self._data.replace(to_replace=to_replace,\n\u001b[1;32m   4584\u001b[0m                                                   \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4585\u001b[0;31m                                                   regex=regex)\n\u001b[0m\u001b[1;32m   4586\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mto_replace\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4587\u001b[0m                 if not (is_re_compilable(regex) or\n",
-      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pandas/core/internals.py\u001b[0m in \u001b[0;36mreplace\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m   3466\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3467\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3468\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'replace'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3469\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3470\u001b[0m     def replace_list(self, src_list, dest_list, inplace=False, regex=False,\n",
-      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pandas/core/internals.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, f, axes, filter, do_integrity_check, consolidate, **kwargs)\u001b[0m\n\u001b[1;32m   3327\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3328\u001b[0m             \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mgr'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3329\u001b[0;31m             \u001b[0mapplied\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3330\u001b[0m             \u001b[0mresult_blocks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_extend_blocks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapplied\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult_blocks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3331\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pandas/core/internals.py\u001b[0m in \u001b[0;36mreplace\u001b[0;34m(self, to_replace, value, inplace, filter, regex, convert, mgr)\u001b[0m\n\u001b[1;32m    758\u001b[0m                 \u001b[0mmask\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfiltered_out\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    759\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 760\u001b[0;31m             \u001b[0mblocks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mputmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    761\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    762\u001b[0m                 blocks = [b.convert(by_item=True, numeric=False,\n",
-      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pandas/core/internals.py\u001b[0m in \u001b[0;36mputmask\u001b[0;34m(self, mask, new, align, inplace, axis, transpose, mgr)\u001b[0m\n\u001b[1;32m    971\u001b[0m                                      \"length to masked array\")\n\u001b[1;32m    972\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 973\u001b[0;31m             \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mputmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    974\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    975\u001b[0m         \u001b[0;31m# maybe upcast me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fold n°1\n"
      ]
     }
    ],
@@ -348,22 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LIghtgbm validation RMSE: 3.6569\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# result\n",
     "print(\"LIghtgbm validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_lgb)))\n",
     "# submit\n",
-    "base.submit(test_pred_lgb,home_path=home_path,tech = \"Lightgbm_feature_1037_param1\")"
+    "base.submit(test_pred_lgb,home_path=home_path,tech = \"Lightgbm_feature_1683_param1\")"
    ]
   },
   {
@@ -569,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -587,80 +579,16 @@
      "output_type": "stream",
      "text": [
       "fold n°1\n",
-      "[0]\ttrain-rmse:3.95126\tvalid-rmse:3.9535\n",
+      "[0]\ttrain-rmse:3.94772\tvalid-rmse:3.95092\n",
       "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
       "\n",
       "Will train until valid-rmse hasn't improved in 200 rounds.\n",
-      "[100]\ttrain-rmse:3.88026\tvalid-rmse:3.88491\n",
-      "[200]\ttrain-rmse:3.85258\tvalid-rmse:3.8593\n",
-      "[300]\ttrain-rmse:3.84171\tvalid-rmse:3.85015\n",
-      "[400]\ttrain-rmse:3.83733\tvalid-rmse:3.84714\n",
-      "[500]\ttrain-rmse:3.83539\tvalid-rmse:3.84644\n",
-      "[600]\ttrain-rmse:3.83452\tvalid-rmse:3.84653\n",
-      "[700]\ttrain-rmse:3.83401\tvalid-rmse:3.84702\n",
-      "Stopping. Best iteration:\n",
-      "[515]\ttrain-rmse:3.83523\tvalid-rmse:3.84641\n",
-      "\n",
-      "fold n°2\n",
-      "[0]\ttrain-rmse:3.95193\tvalid-rmse:3.95067\n",
-      "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
-      "[100]\ttrain-rmse:3.88094\tvalid-rmse:3.88219\n",
-      "[200]\ttrain-rmse:3.85317\tvalid-rmse:3.8563\n",
-      "[300]\ttrain-rmse:3.8424\tvalid-rmse:3.84681\n",
-      "[400]\ttrain-rmse:3.83792\tvalid-rmse:3.84341\n",
-      "[500]\ttrain-rmse:3.83599\tvalid-rmse:3.84237\n",
-      "[600]\ttrain-rmse:3.83512\tvalid-rmse:3.8422\n",
-      "[700]\ttrain-rmse:3.8347\tvalid-rmse:3.84232\n",
-      "Stopping. Best iteration:\n",
-      "[582]\ttrain-rmse:3.83525\tvalid-rmse:3.84218\n",
-      "\n",
-      "fold n°3\n",
-      "[0]\ttrain-rmse:3.95015\tvalid-rmse:3.95841\n",
-      "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
-      "[100]\ttrain-rmse:3.8786\tvalid-rmse:3.8902\n",
-      "[200]\ttrain-rmse:3.85097\tvalid-rmse:3.86503\n",
-      "[300]\ttrain-rmse:3.84008\tvalid-rmse:3.85604\n",
-      "[400]\ttrain-rmse:3.83562\tvalid-rmse:3.85308\n",
-      "[500]\ttrain-rmse:3.83369\tvalid-rmse:3.85236\n",
-      "[600]\ttrain-rmse:3.83277\tvalid-rmse:3.8525\n",
-      "[700]\ttrain-rmse:3.83229\tvalid-rmse:3.8529\n",
-      "Stopping. Best iteration:\n",
-      "[508]\ttrain-rmse:3.8336\tvalid-rmse:3.85234\n",
-      "\n",
-      "fold n°4\n",
-      "[0]\ttrain-rmse:3.95222\tvalid-rmse:3.95014\n",
-      "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
-      "[100]\ttrain-rmse:3.88093\tvalid-rmse:3.88142\n",
-      "[200]\ttrain-rmse:3.85328\tvalid-rmse:3.85575\n",
-      "[300]\ttrain-rmse:3.84237\tvalid-rmse:3.8464\n",
-      "[400]\ttrain-rmse:3.83794\tvalid-rmse:3.84316\n",
-      "[500]\ttrain-rmse:3.83602\tvalid-rmse:3.84217\n",
-      "[600]\ttrain-rmse:3.8351\tvalid-rmse:3.84202\n",
-      "[700]\ttrain-rmse:3.83462\tvalid-rmse:3.84218\n",
-      "Stopping. Best iteration:\n",
-      "[561]\ttrain-rmse:3.8354\tvalid-rmse:3.842\n",
-      "\n",
-      "fold n°5\n",
-      "[0]\ttrain-rmse:3.95321\tvalid-rmse:3.94616\n",
-      "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
-      "[100]\ttrain-rmse:3.88143\tvalid-rmse:3.87879\n",
-      "[200]\ttrain-rmse:3.85361\tvalid-rmse:3.85412\n",
-      "[300]\ttrain-rmse:3.84228\tvalid-rmse:3.84553\n",
-      "[400]\ttrain-rmse:3.8378\tvalid-rmse:3.84279\n",
-      "[500]\ttrain-rmse:3.83586\tvalid-rmse:3.8422\n",
-      "[600]\ttrain-rmse:3.83494\tvalid-rmse:3.8424\n",
-      "[700]\ttrain-rmse:3.83443\tvalid-rmse:3.84294\n",
-      "Stopping. Best iteration:\n",
-      "[516]\ttrain-rmse:3.83568\tvalid-rmse:3.84219\n",
-      "\n"
+      "[100]\ttrain-rmse:3.56059\tvalid-rmse:3.79812\n",
+      "[200]\ttrain-rmse:3.31366\tvalid-rmse:3.73311\n",
+      "[300]\ttrain-rmse:3.14668\tvalid-rmse:3.70365\n",
+      "[400]\ttrain-rmse:3.02128\tvalid-rmse:3.69066\n",
+      "[500]\ttrain-rmse:2.92815\tvalid-rmse:3.68465\n",
+      "[600]\ttrain-rmse:2.85235\tvalid-rmse:3.6807\n"
      ]
     }
    ],
@@ -673,7 +601,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "NameError",
