--- a/jn/Make_Parameters.ipynb
+++ b/jn/Make_Parameters.ipynb
@@ -108,9 +108,32 @@
     "             \"bagging_seed\": 11,\n",
     "             \"metric\": 'rmse',\n",
     "             \"lambda_l1\": 0.2634,\n",
-    "             \"random_state\": 133,\n",
+    "             \"random_state\": 831,\n",
     "             \"verbosity\": -1}\n",
     "save_list(param_set,file_name = 'kernel_param_tuning_lgb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_set = {'num_leaves': 31,\n",
+    "             'min_data_in_leaf': 30, \n",
+    "             'objective':'binary',\n",
+    "             'max_depth': 6,\n",
+    "             'learning_rate': 0.01,\n",
+    "             \"boosting\": \"rf\",\n",
+    "             \"feature_fraction\": 0.9, \n",
+    "             \"bagging_freq\": 1,\n",
+    "             \"bagging_fraction\": 0.9 ,\n",
+    "             \"bagging_seed\": 11,\n",
+    "             \"metric\": 'binary_logloss',\n",
+    "             \"lambda_l1\": 0.1,\n",
+    "             \"verbosity\": -1,\n",
+    "             \"random_state\": 831}\n",
+    "save_list(param_set,file_name = 'kernel_param_logloss')"
    ]
   },
   {
