--- a/jn/Make_Parameters.ipynb
+++ b/jn/Make_Parameters.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# setting"
@@ -134,6 +134,17 @@
     "             \"verbosity\": -1,\n",
     "             \"random_state\": 831}\n",
     "save_list(param_set,file_name = 'kernel_param_logloss')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_set = {'objective' : 'binary',\n",
+    "             'metric' : 'auc'}\n",
+    "save_list(param_set,file_name = 'kernel_param_auc')"
    ]
   },
   {
